--- a/FINAL/travel-booking/src/main/resources/templates/fragments/login_modal.html
+++ b/FINAL/travel-booking/src/main/resources/templates/fragments/login_modal.html
@@ -44,12 +44,14 @@
                   <form method="post" action="#" name="contactform" id="contactform" >
 
                     <div class="form-group mb-4 input-row">
+                      <span class="la la-envelope form-icon"></span>
                       <input type="text" class="form-control login-email" id="login-email"
                              placeholder="Email Address" autocomplete="off">
                       <small style="color: #e74c3c">Error</small>
                     </div>
 
                     <div class="form-group mb-2 input-row">
+                      <span class="la la-lock form-icon"></span>
                       <input type="password" class="form-control login-password"
                              id="login-password" placeholder="Password" autocomplete="off">
                       <small style="color: #e74c3c">Error</small>
@@ -84,16 +86,19 @@
                   <hr class="log-reg-hr position-relative my-4 overflow-visible">
                   <form method="post" action="#" name="contactform1" id="contactform1">
                     <div class="form-group mb-4 input-row">
+                      <span class="la la-envelope form-icon"></span>
                       <input type="text" name="user_name" class="form-control signup-email" id="signup-email"
                              placeholder="Email Address" autocomplete="off">
                       <small style="color: #e74c3c">Error</small>
                     </div>
                     <div class="form-group mb-4 input-row">
+                      <span class="la la-lock form-icon"></span>
                       <input type="password" name="password_name" class="form-control signup-password"
                              id="signup-password" placeholder="Password" autocomplete="off">
                       <small style="color: #e74c3c">Error</small>
                     </div>
                     <div class="form-group mb-4 input-row">
+                      <span class="la la-lock form-icon"></span>
                       <input type="password" name="password_name" class="form-control signup-confirm-password"
                              id="signup-confirm-password" placeholder="Re-enter Password" autocomplete="off">
                       <small style="color: #e74c3c">Error</small>
