--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_admin.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_admin.html
@@ -24,9 +24,8 @@
 
     <link rel="stylesheet" href="/assets/admin/css/style.css">
 
-    <link rel="shortcut icon" href="/assets/admin/images/favicon.png"/>
+    <link rel="shortcut icon" href="/assets/user/images/favicon.png"/>
 
-    //TOASTR
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <style>
@@ -42,6 +41,7 @@
             max-width: 100px; /* Điều chỉnh số lượng ký tự tối đa hiển thị */
         }
     </style>
+
     <!-- Components CSS -->
     <th:block th:replace="${cssResources} ?: ~{}"></th:block>
 </head>
@@ -71,7 +71,13 @@
                 <li class="nav-item">
                     <a href="/admin/partner-management" class="nav-link">
                         <i class="link-icon" data-feather="table"></i>
-                        <span class="link-title">Partner Management</span>
+                        <span class="link-title">Hotel Management</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/admin/user-management" class="nav-link">
+                        <i class="link-icon" data-feather="table"></i>
+                        <span class="link-title">User Management</span>
                     </a>
                 </li>
 
@@ -89,9 +95,6 @@
                             </li>
                             <li class="nav-item">
                                 <a href="/admin/change-password" class="nav-link">Change Password</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="addevents.html" class="nav-link">Payment</a>
                             </li>
                         </ul>
                     </div>
@@ -256,8 +259,6 @@
 <!--LOADING-->
 <script src="/assets/user/js/loading.js"></script>
 
-<!--TOASTR-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script>
     $(document).ready(function () {
