--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_partner.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_partner.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Travelin Responsive HTML Admin Dashboard Template based on Bootstrap 5">
     <meta name="author" content="Travelin">
-    <title th:replace="${title}">Page Title</title>
+    <title th:replace="${title}">Dashboard User</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -24,9 +24,8 @@
 
     <link rel="stylesheet" href="/assets/admin/css/style.css">
 
-    <link rel="shortcut icon" href="/assets/admin/images/favicon.png"/>
+    <link rel="shortcut icon" href="/assets/user/images/favicon.png"/>
 
-    //TOASTR
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <style>
