--- a/FINAL/travel-booking/src/main/resources/templates/management/user/booking-user.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/user/booking-user.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{layout/layout_dashboard_partner :: main-fragment(
+      th:replace="~{layout/layout_dashboard_user :: main-fragment(
                                                 ~{:: title},
                                                 ~{:: #css-resources},
                                                 ~{:: #js-resources},
@@ -115,6 +115,7 @@
                                     <td th:text="${booking.startDate}"/>
                                     <td th:text="${booking.endDate}"/>
                                     <td th:text="${booking.createdDateTime}"/>
+<!--                                    <td th:text="${booking.totalAmount}"/>-->
                                     <td class="text-center">
                                         <script th:inline="javascript">
                                             var price = [[${booking.totalAmount}]];
@@ -129,13 +130,6 @@
                                     </td>
                                     <td class="text-center">
                                         <ul class="d-flex list-unstyled mb-0 justify-content-center">
-                                            <a href="#" class="btn btn-primary px-1 py-1 confirm-booking-btn me-2"
-                                               th:attr="data-booking-id=${booking.id}"
-                                               th:if="${booking.status.name == 'Pending'}"
-                                               th:value="CONFIRMED"
-                                               style="display: inline-flex; align-items: center;">
-                                                <i class="link-icon" data-feather="check"></i> Confirm
-                                            </a>
 
                                             <a class="btn btn-danger px-1 py-1 cancel-booking-btn"
                                                th:attr="data-booking-id=${booking.id}"
@@ -162,13 +156,13 @@
                 <!-- Previous button -->
                 <li class="page-item prev-button" th:classappend="${currentPage == 1 ? 'disabled' : ''}">
                     <a class="page-link"
-                       th:href="@{/partner/bookings?pageIndex={page}(page=${currentPage - 1})}">Previous</a>
+                       th:href="@{/user/bookings?pageIndex={page}(page=${currentPage - 1})}">Previous</a>
                 </li>
 
                 <!-- Page numbers -->
                 <li class="page-item" th:each="page : ${#numbers.sequence(1, bookingList.getPageNumber)}"
                     th:classappend="${currentPage == page ? 'active' : ''}">
-                    <a class="page-link" th:href="@{/partner/bookings(pageIndex=${page})}"><span
+                    <a class="page-link" th:href="@{/user/bookings(pageIndex=${page})}"><span
                             th:text="${page}"></span></a>
                 </li>
 
@@ -176,7 +170,7 @@
                 <li class="page-item" id="nextButton"
                     th:classappend="${currentPage >= bookingList.getPageNumber ? 'disabled' : ''}">
                     <a class="page-link"
-                       th:href="@{/partner/bookings?pageIndex={page}(page=${currentPage + 1})}">Next</a>
+                       th:href="@{/user/bookings?pageIndex={page}(page=${currentPage + 1})}">Next</a>
                 </li>
             </ul>
         </div>
